<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:backgroundTintMode="screen"
    android:visibility="visible"
    tools:context=".SpanishToEnglish">


    <Button
        android:id="@+id/button_say"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="279dp"
        android:backgroundTint="@color/buttons"
        android:onClick="VoiceComingUp"
        android:text="@string/say_it_2"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_en_sp"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="170dp"
        android:backgroundTint="@color/buttons"
        android:onClick="ExitButton"
        android:text="@string/exit_sp"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button_en_sp"
        android:layout_width="185dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/acme"
        android:onClick="TranslationToast"
        android:text="@string/translate_2"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_say"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:hint="@string/hint_2"
        android:isScrollContainer="true"
        android:keepScreenOn="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_say"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="192dp"
        android:fontFamily="@font/acme"
        android:text="@string/español"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toStartOf="@+id/text_spanish"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="ESPAÑOL" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="192dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/baseline_double_arrow_black_18dp" />

    <TextView
        android:id="@+id/text_spanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="192dp"
        android:fontFamily="@font/acme"
        android:text="@string/ingles"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_english"
        tools:text="INGLES" />

    <TextView
        android:id="@+id/translatedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="207dp"
        android:textColor="#8E0C0C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
